@@ -358,6 +358,9 @@ Not used by SMSD currently, included only for application usage.
 
 History of schema versions:
 
+10 - DeliveryDateTime is now NULL when message is not delivered, added several
+indexes
+
 9 - added sent/received counters to phones table
 
 8 - introduced phones table
