@@ -26,6 +26,7 @@ ChangeLog
 [-] * Experimental SMSD monitor support on Windows.
 [-] * Added ID for Nokia 2680 (bug #813).
 [-] * Number of retries of message send in SMSD can be configured.
+[-] * Updated SQL files to new version (mostly added useful indexes).
 
 20090202 - 1.22.93
 
